--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="all.min.css" rel="stylesheet" />
-		<title>Capped at 0</title>
+		<title>Periodic Table</title>
 	</head>
 	<body>
 		<div id="app"></div>
