--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="all.min.css" rel="stylesheet" />
 		<title>Capped at 0</title>
+		<script type="module" crossorigin src="./assets/index.45685219.js"></script>
+		<link rel="stylesheet" href="./assets/index.4ff3cca6.css">
 	</head>
 	<body>
 		<div id="app"></div>
-		<script type="module" src="/src/main.ts"></script>
+		
 	</body>
 </html>
